최초등록 기능 추가 코드 정리 및 일부 warning 처리

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,45 @@
 <resources>
     <string name="app_name">독립기념관 관람</string>
+    <string name="check_str">관람 현황</string>
+    <string name="myinfo_str">내 정보</string>
+    <string name="registration_str">최초 등록</string>
+    <string name="certificate_str">확인증</string>
+    <string name="regist_info_str">센터 등록 안내</string>
+    <string name="login_str">로그인</string>
+    <string name="name_str">이름</string>
+    <string name="name_hint_str">이름을 입력하세요.</string>
+    <string name="number_str">군번</string>
+    <string name="number_hint_str">군번을 숫자만 입력하세요.</string>
+    <string name="phone_str">휴대폰</string>
+    <string name="phone_hint_str">휴대폰 번호를 숫자만 입력하세요.</string>
+    <string name="start_str">관람하기</string>
+    <string name="homepage_str">홈페이지</string>
+    <string name="help_str">도움말</string>
+    <string name="map_str">지도</string>
+    <string name="personaldata_str">개인 정보</string>
+    <string name="additiondata_str">추가 정보</string>
+    <string name="participate_str">관람 방법</string>
+    <string name="normal_part_str">일반 관람</string>
+    <string name="explan_part_str">전시 해설</string>
+    <string name="temper_str">소속</string>
+    <string name="temper_hint_str">소속 부대를 자세히 입력하세요</string>
+    <string name="army_str">육군</string>
+    <string name="navy_str">해군</string>
+    <string name="airforce_str">공군</string>
+    <string name="mc_str">해병대</string>
+    <string name="destination_str">행선지</string>
+    <string name="destination_hint_str">행선지를 입력하세요</string>
+    <string name="clause_str">이용 약관</string>
+    <string name="clause_detail_1_str">개인정보 수집 및 활용</string>
+    <string name="clause_detail_2_str">에 동의하십니까?</string>
+    <string name="registration_apply_str">관람 등록</string>
+    <string name="apply_str">네</string>
+    <string name="cancel_str">아니오</string>
+
+    <string name="name_popup_str">이름 : </string>
+    <string name="number_popup_str">군번 : </string>
+    <string name="phone_popup_str">휴대폰 : </string>
+    <string name="temper_popup_str">소속 : </string>
+    <string name="destination_popup_str">행선지 : </string>
+    <string name="question_popup_str">정확히 입력하셨나요?</string>
 </resources>
