퍼미션 요청 추가, 레이아웃 수정 - 앱 실행시 카메라, GPS 퍼미션 요청 - 버튼 커스텀, 최초등록 및 로그아웃 액티비티 레이아웃 변경   -> 군번, 휴대폰 하이픈으로 분리   -> 군번, 휴대폰 앞자리와 군종 선택 드롭박스 형태로 변경 * 최초등록 후 자동로그인 시 서버 통신 되지 않는 문제 해결

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,19 +22,20 @@
     <string name="normal_part_str">일반 관람</string>
     <string name="explan_part_str">전시 해설</string>
     <string name="temper_str">소속</string>
-    <string name="temper_hint_str">소속 부대를 자세히 입력하세요</string>
+    <string name="temper_hint_str">소속 부대를 자세히 입력하세요.</string>
     <string name="army_str">육군</string>
     <string name="navy_str">해군</string>
     <string name="airforce_str">공군</string>
     <string name="mc_str">해병대</string>
     <string name="destination_str">행선지</string>
-    <string name="destination_hint_str">행선지를 입력하세요</string>
+    <string name="destination_hint_str">행선지를 입력하세요.</string>
     <string name="clause_str">이용 약관</string>
     <string name="clause_detail_1_str">개인정보 수집 및 활용</string>
     <string name="clause_detail_2_str">에 동의하십니까?</string>
     <string name="registration_apply_str">관람 등록</string>
     <string name="apply_str">네</string>
     <string name="cancel_str">아니오</string>
+    <string name="hyphen">-</string>
 
     <string name="name_popup_str">이름 : </string>
     <string name="number_popup_str">군번 : </string>
