--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,17 @@
     <string name="apply_str">네</string>
     <string name="cancel_str">아니오</string>
     <string name="hyphen">-</string>
+    <string name="time_start_str">관람 시작 시간</string>
+    <string name="time_end_str">종료 예정 시간</string>
+    <string name="time_elapsed_str">현재 경과 시간</string>
+    <string name="ex1_str">1 전시관</string>
+    <string name="ex2_str">2 전시관</string>
+    <string name="ex3_str">3 전시관</string>
+    <string name="ex4_str">4 전시관</string>
+    <string name="ex5_str">5 전시관</string>
+    <string name="ex6_str">6 전시관</string>
+    <string name="openMap_str">지도 열기</string>
+    <string name="finish_str">관람 종료</string>
 
     <string name="name_popup_str">이름 : </string>
     <string name="number_popup_str">군번 : </string>
